<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        />

    <ScrollView
        android:id="@+id/scrllview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="vertical"
        android:layout_below="@+id/img_logo"
        >

    <LinearLayout
        android:id="@+id/Linr1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical"
        android:focusable="false"
        android:focusableInTouchMode="true"
        android:layout_marginBottom="20pt"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/tx_vu"
            android:text="@string/select_profile"
            android:textColor="@color/black"
            android:textSize="8pt"
            android:gravity="start"
            android:layout_margin="10dp"
            />

        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="12dp"
            android:layout_gravity="center"
        >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/doctor"
                style="@style/Txview"
                android:gravity="center"
                android:padding="15dp"
            />

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="12dp"
            android:layout_marginTop="20dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/compunder"
                style="@style/Txview"
                android:gravity="center"
                android:padding="10dp"
                />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="12dp"
            android:layout_marginTop="20dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/clinic_ownwer"
                style="@style/Txview"
                android:gravity="center"
                android:padding="10dp"
                />

        </androidx.cardview.widget.CardView>

    </LinearLayout>
    </ScrollView>

</RelativeLayout>