<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:focusable="false"
    android:focusableInTouchMode="true">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        />

    <ScrollView
        android:id="@+id/scrllview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="vertical"
        android:layout_below="@+id/img_logo"
        >

    <LinearLayout
        android:id="@+id/Linr1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical"
        android:focusable="false"
        android:focusableInTouchMode="true"
        android:layout_marginBottom="20pt"
        >

    <EditText
        android:id="@+id/ed_email"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:hint="Email or Phone Number"
        android:textColorHint="@color/light_grey"
        android:background="@drawable/edit_text"
        android:paddingLeft="5dp"
        android:singleLine="true"
        android:padding="2dp"
        android:drawableLeft="@drawable/ic_account_circle_black_24dp"
        android:drawablePadding="10dp"
        style="@style/ed_txt"
        android:autoLink="none"
        android:autoText="false"
        />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:orientation="horizontal"
            android:background="@drawable/edit_text"
            android:gravity="center"
            android:padding="2dp"
            android:layout_marginTop="15dp"
            >

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/lock"
                android:layout_gravity="center_vertical"
                android:paddingStart="2dp"
                android:paddingLeft="2dp"
                />

        <com.maksim88.passwordedittext.PasswordEditText
            android:id="@+id/ed_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Password"
            android:backgroundTint="@color/light_grey"
            android:textColorHint="@color/light_grey"
            android:singleLine="true"
            android:inputType="textPassword"
            style="@style/ed_txt"
            android:background="@android:color/transparent"
            android:textColor="@color/black"
            android:layout_marginLeft="10dp"
        />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical"
            >

    <Button
        android:id="@+id/button_login"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="35dp"
        android:background="@drawable/button"
        android:layout_marginTop="20dp"
        android:text="LOG  IN"
        android:textColor="@color/white"
        android:textSize="8pt"
        style="@style/tx_vu"
        />

        <TextView
            android:id="@+id/tx_forgetpass"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="7pt"
            android:text="@string/forgot_pass"
            android:gravity="center"
            android:textColor="@color/grey"
            android:layout_marginTop="20dp"
            style="@style/tx_vu"
            />

        </LinearLayout>
        <TextView
            android:id="@+id/tx_newAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="7pt"
            android:text="Don\'t  have  an  account. Create  now"
            android:gravity="center"
            android:textColor="@color/grey"
            style="@style/tx_vu"
            android:textAlignment="textStart"
            android:padding="3dp"
            android:lineSpacingExtra="10dp"
            android:layout_marginTop="10dp"
            />

        <Button
            android:id="@+id/button_gmail"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@drawable/button"
            android:layout_marginTop="18dp"
            android:textAllCaps="false"
            android:text="@string/lgin_gmail"
            android:textColor="@color/white"
            android:textSize="8pt"
            android:drawableLeft="@drawable/google"
            android:drawablePadding="2dip"
            android:paddingLeft="30dip"
            android:paddingRight="26dip"
            android:singleLine="true"
            android:gravity="center"
            style="@style/tx_vu"
            />

        <Button
            android:id="@+id/button_fb"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@drawable/button"
            android:layout_marginTop="20dp"
            android:textAllCaps="false"
            android:text="Login with facebook"
            android:textColor="@color/white"
            android:textSize="8pt"
            android:drawableLeft="@drawable/fblogo"
            android:drawablePadding="2dip"
            android:paddingLeft="30dip"
            android:paddingRight="26dip"
            android:singleLine="true"
            android:gravity="center"
            style="@style/tx_vu"
            />


        <Button
            android:id="@+id/button_twitter"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@drawable/button"
            android:layout_marginTop="20dp"
            android:textAllCaps="false"
            android:text="Login with Twitter"
            android:textColor="@color/white"
            android:textSize="8pt"
            android:drawableLeft="@drawable/twitter"
            android:drawablePadding="2dip"
            android:paddingLeft="30dip"
            android:paddingRight="26dip"
            android:singleLine="true"
            android:gravity="center"
            style="@style/tx_vu"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Or"
            style="@style/tx_vu"
            android:textSize="7pt"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/button_signup"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@drawable/button_1"
            android:textAllCaps="false"
            android:text="Sign Up"
            android:textColor="@color/white"
            android:textSize="8pt"
            android:drawableLeft="@drawable/newuser"
            android:drawablePadding="2dip"
            android:paddingLeft="30dip"
            android:paddingRight="26dip"
            android:singleLine="true"
            android:gravity="center"
            style="@style/tx_vu"
            />
    </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="4dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        >

    <TextView
        android:id="@+id/agree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="6pt"
        android:text="@string/agree"
        android:textColor="@color/black"
        style="@style/tx_vu"
        />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="6pt"
            android:text="@string/terms"
            android:textColor="@color/blue"
            style="@style/tx_vu"
            android:layout_marginLeft="3dp"
            />
    </LinearLayout>

</RelativeLayout>